@@ -114,65 +114,52 @@ public class SecurityConfiguracao {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuracao = new CorsConfiguration();
-
-        // Permite credenciais (cookies, headers de autenticação)
         configuracao.setAllowCredentials(true);
-
-        // Lê origens permitidas de variável de ambiente ou usa valores padrão para desenvolvimento
+    
+        // Lê do env corretamente
         String allowedOriginsEnv = null;
-        if (allowedOriginsEnv != null && !allowedOriginsEnv.isEmpty()) {
-            // Suporta múltiplas origens separadas por vírgula
-            List<String> origins = Arrays.asList(allowedOriginsEnv.split(","));
-            configuracao.setAllowedOrigins(origins);
+        List<String> origins;
+    
+        if (allowedOriginsEnv != null && !allowedOriginsEnv.isBlank()) {
+            origins = Arrays.stream(allowedOriginsEnv.split(","))
+                    .map(String::trim)
+                    .flatMap(orig -> {
+                        if (orig.endsWith(":80")) {
+                            return List.of(orig, orig.replaceFirst(":80$", "")).stream();
+                        }
+                        return List.of(orig).stream();
+                    })
+                    .distinct()
+                    .toList();
         } else {
-            // Valores padrão para desenvolvimento local
-            configuracao.setAllowedOrigins(List.of(
+            // defaults, garanta que inclui o IP do front (sem :80)
+            origins = List.of(
                 "http://localhost:5173",
                 "http://localhost:3000",
-                "http://localhost:8080",
-                "http://52.3.112.88:80",
                 "http://52.3.112.88",
+                "http://52.3.112.88:80",
                 "http://52.3.112.88:8080"
-            ));
+            );
         }
-
-        // Métodos HTTP permitidos
-        configuracao.setAllowedMethods(
-                Arrays.asList(
-                        HttpMethod.GET.name(),
-                        HttpMethod.POST.name(),
-                        HttpMethod.PUT.name(),
-                        HttpMethod.PATCH.name(),
-                        HttpMethod.DELETE.name(),
-                        HttpMethod.OPTIONS.name(),
-                        HttpMethod.HEAD.name(),
-                        HttpMethod.TRACE.name()));
-
-        // Headers permitidos
-        configuracao.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
-
-        // Headers expostos para o frontend
-        configuracao.setExposedHeaders(Arrays.asList(
-                HttpHeaders.CONTENT_DISPOSITION,
-                "Authorization",
-                "Content-Type"
-        ));
-
-        // Tempo de cache para preflight requests
+    
+        configuracao.setAllowedOrigins(origins);
+        // fallback: patterns (útil se quiser curingas), não use "*" com allowCredentials(true)
+        configuracao.setAllowedOriginPatterns(List.of("http://52.3.112.88", "http://localhost:*"));
+    
+        configuracao.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuracao.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION, "Authorization", "Content-Type", "Set-Cookie"));
         configuracao.setMaxAge(3600L);
-
+    
         UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
         origem.registerCorsConfiguration("/**", configuracao);
-
+    
+        // Log (stdout) para podermos ver no docker logs quais origens foram aplicadas
+        System.out.println("CORS allowed origins: " + origins);
+        System.out.println("CORS allowed origin patterns: " + configuracao.getAllowedOriginPatterns());
+    
         return origem;
     }
+
 }
  
